UI fixes. Fixes #30. Fixes #26.
Sets overflow property for <pre> blocks to use scrollbars rather than continue outside the container.
Adds relative font-size property to #royt to fix inheriting the new layout's 10px default font size.

--- a/royt/style.css
+++ b/royt/style.css
@@ -15,6 +15,7 @@ body {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     overflow: visible;
     margin-top: 30px;
+    font-size: 1.4rem;
 }
 #royt a {
     color: #0066aa;
@@ -826,6 +827,9 @@ a[href$="/spoiler"]::before {
     margin-right: 10px;
     float: right;
 }
+#royt pre {
+    overflow:auto;
+}
 [dark] #royt {
     background: #242424 !important;
     color: #fff;
@@ -881,6 +885,7 @@ a[href$="/spoiler"]::before {
 }
 #allowOnChannelContainer {
     margin-left: 15px;
+    font-size: 1.4rem;
 }
 #royt .royt_tab.active > a {
     pointer-events: auto;
